--- a/package.json
+++ b/package.json
@@ -11,5 +11,13 @@
   "license": "ISC",
   "devDependencies": {
     "electron": "18.2.0"
+  },
+  "dependencies": {
+    "node-pty": "^0.10.1",
+    "socket.io": "^4.5.1",
+    "socket.io-client": "^4.5.1",
+    "ssh2": "^1.10.0",
+    "xterm": "^4.18.0",
+    "xterm-addon-fit": "^0.5.0"
   }
 }
